Fix some elements were overflowing the page

--- a/assets/app.scss
+++ b/assets/app.scss
@@ -33,6 +33,9 @@ code {
 
 a {
   color: var(--page-link-color);
+  img {
+    max-width: 100%;
+  }
 }
 a:active,
 a:hover,
@@ -150,7 +153,7 @@ a:focus {
     background-color: #ffcfc6;
   }
   .table-block-body {
-    overflow: scroll;
+    overflow-x: auto;
   }
   .cell {
     margin: 0;
